[package]
name = "palm"
version = "0.1.0"
authors = ["Response777 <CoolResponse777@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"

[profile.release]
debug = true

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.3.2"
